--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth/core": "latest",
+    "@auth/core": "^0.41.0",
     "@hookform/resolvers": "^3.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -50,10 +51,10 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
-    "next-auth": "latest",
+    "next": "^14.2.33",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
-    "nodemailer": "latest",
+    "nodemailer": "^7.0.9",
     "prisma": "^6.16.2",
     "react": "^18",
     "react-day-picker": "9.8.0",
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "knip": "^5.64.0",
