--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@uploadcare/react-uploader": "^1.11.0",
+    "@uploadcare/react-widget": "^3.0.0",
+    "@uploadcare/upload-client": "^6.18.0",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
@@ -66,12 +69,13 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uploadcare": "^0.4.8",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22",
+    "@types/node": "^22.18.13",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
