--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,14 +52,17 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
+    "generate": "^0.14.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
     "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.9",
-    "prisma": "^6.16.2",
+    "prisma": "^6.19.0",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
