--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
-    "generate": "^0.14.0",
+    "generate": "^0.8.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
@@ -46,7 +46,8 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
-    "tailwind-merge": "^2.5.5",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadcare": "^0.4.8",
     "vaul": "^0.9.9",
