--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,10 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "knip": "knip"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -21,19 +20,12 @@
     "@uploadcare/react-widget": "^3.0.0",
     "@uploadcare/upload-client": "^6.18.0",
     "@vercel/analytics": "latest",
-    "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
-    "geist": "^1.3.1",
-    "generate": "^0.14.0",
-    "i": "^0.3.7",
-    "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
     "next-auth": "^4.24.7",
@@ -42,29 +34,24 @@
     "nodemailer": "^7.0.9",
     "prisma": "^6.19.0",
     "react": "^18",
-    "react-day-picker": "9.8.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.60.0",
-    "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
     "uploadcare": "^0.4.8",
-    "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22.18.13",
+    "@types/node": "^22.19.1",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
-    "knip": "^5.64.0",
+    "knip": "^5.69.1",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
