--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
@@ -40,6 +41,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "uploadcare": "^0.4.8",
+    "xlsx": "^0.18.5",
     "zod": "3.25.67"
   },
   "devDependencies": {
