--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma migrate deploy && next build",
+    "vercel-build": "prisma db push && next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
