--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,14 @@
 {
   "functions": {
     "app/main.py": {
-      "runtime": "python3.11",
+      "runtime": "vercel-python@3.9",
       "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/app/main.py"
+      "dest": "app/main.py"
     }
   ]
 }
