--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,13 @@
 {
   "functions": {
-    "app/main.py": {
+    "api/main.py": {
       "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app/main.py"
+      "dest": "api/main.py"
     }
   ]
 }
